src/app/todo/todo.component.css
@import url('https://fonts.googleapis.com/css?family=Germania+One');

.body{
    overflow-y: hidden !important;
}

.wolf-font{
    font-family: 'Germania One', cursive;
}

.mat-list-icon {
    color: rgba(0, 0, 0, 0.54);
}

.content {
    padding: 5px;
    flex-flow: column;
    height: 100vh;
}
.btn-play{
    margin-top: 50px;
}



.mat-expansion-panel-header-title {
    width: 65px;
}

.input-name{
    margin-left: 20px;
    margin-right: 20px;
}

.example-tab-icon {
    margin-right: 8px;
}

.lista-overflow{
    height: 50vh;
    overflow-y: auto;
}
.lista-overflow-classes{
    height: 75vh;
    overflow-y: auto;
}
.lista-overflow-game{
    max-height: 400px;
    overflow-y: auto;
    display: flex;
    flex-flow: wrap;
    justify-content: space-evenly;
}

.icon-white{
    fill: #fff;
  }

.icon-good{
    fill: #673ab7;
}

.icon-bad{
    fill: #f44336;
}

.icon-neutral{
    fill: #ffd740;
}

.icon-primary{
    fill: #673ab7;
}
.icon-warn{
    fill: #f44336;
}

.icon-gray{
    fill: #ccc;
}

.gray-color{
    color: #ccc;
}

.darkgray-color{
    color: #666;
}

.player{
    
    width: 130px;
    height: 120px;
    border-radius: 15px;
    margin-top: 10px;
    margin-bottom: 10px;

}
.good-border{
    border: 2px solid #673ab7;
}

.bad-border{
    border: 2px solid #f44336;
}

.center-text{
    width: 250px;
    margin: auto;
}

.footer-card-player{
    display: flex;
    flex-flow: row-reverse;
}

.subtitle-player{
    width: 120px;
    font-size: 10pt;
    -webkit-font-smoothing: antialiased !important;
    -moz-osx-font-smoothing: grayscale !important;
}

.title-player{
    font-size: 20pt;
}

.status-player{
    font-size: 15pt;
    width: 150px;
    display: flex;
    flex-flow: column;
}

.dead{
    background-color: #ccc;
    border: 1px solid #777;
}

.dead .mat-card-title{
    color: #222 !important;
}

.grave-dead{
    text-align: center;
}

.grave{
    width: 100%;
    height: 100%;
}

.label-balance{
    padding-left: 16px;
}

.day{
    width: 100%;
}
.classesInfo{
    width: 350px;
}

.filter{
    margin-top: 20px;
    margin-bottom: 20px;
}

.lycan-border{
    border-color: #f44336 !important;
}

.cursed-border{
    border-top-color: #f44336 !important;
    border-left-color: #f44336 !important;
}
.lupin-border{
    border-color: #673ab7 !important;
}
.cult-border{
    border-color: #ffd740 !important;
}

.initial-screen{
    background: rgba(104,58,183,1);
background: -moz-linear-gradient(45deg, rgba(104,58,183,1) 0%, rgba(78,1,137,1) 100%);
background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(104,58,183,1)), color-stop(100%, rgba(78,1,137,1)));
background: -webkit-linear-gradient(45deg, rgba(104,58,183,1) 0%, rgba(78,1,137,1) 100%);
background: -o-linear-gradient(45deg, rgba(104,58,183,1) 0%, rgba(78,1,137,1) 100%);
background: -ms-linear-gradient(45deg, rgba(104,58,183,1) 0%, rgba(78,1,137,1) 100%);
background: linear-gradient(45deg, rgba(104,58,183,1) 0%, rgba(78,1,137,1) 100%);
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#683ab7', endColorstr='#4e0189', GradientType=1 );
    height: 100vh;
    justify-content: center;
    
}
.newgame-screen{
    height: 100vh;
    justify-content: center;
    text-align: center;
}
.newgame-screen button{
    margin-bottom: 10px;
}

.blink_me {
    animation: blinker 2s linear infinite;
  }
  
  @keyframes blinker {  
    50% { opacity: 0; }
  }

  .initial-screen span{
    color: #fff;
    font-size: 24pt;
    text-align: center;
  }

  .icon-start{
      height: 100px;
      width: 100vw;
      text-align: center;
  }

  .subtitles{
      padding-left: 16px;
  }

  /* span.input-group-text.decrease {
      color: #fff;
      background-color: #673ab7;
  } */
  
  .spinner-number{
    width: 100px;
    text-align: right;
    margin: auto;
    margin-right: 0;
  }

.disabled-icon{
      fill: #ccc !important;
  } 

button{
    outline: none;
}

